--- a/src/app/Styles/AddNewPost.css
+++ b/src/app/Styles/AddNewPost.css
@@ -1,4 +1,5 @@
 /* Container styles */
+
 .form-container {
   max-width: 1200px;
   margin-top:60px;
@@ -8,11 +9,13 @@
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
+  font-family: "Notos Sans Tamil",sans-serif;
 }
 .post-form-container{
   margin-left:115px;
 }
 .addposttitle{
+  font-family: 'Notos Sans Tamil'sans-serif;
   margin-top: -13px;
   font-weight: 500;
   font-size: 18px;
@@ -44,9 +47,8 @@
 }
 /* Placeholder styling for all inputs and textarea */
 input::placeholder,
-textarea::placeholder,
 select::placeholder {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Notos Sans Tamil'sans-serif;
   font-size: 16px;
   font-weight:500;
   color: #666;
@@ -55,9 +57,9 @@ select::placeholder {
 input[type="text"],
 input[type="date"],
 input[type="url"],
-select,
-textarea {
+select {
   padding: 10px;
+  font-family: "Notos Sans Tamil",sans-serif;
   font-size: 15px;
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -65,9 +67,32 @@ textarea {
   box-sizing: border-box;
   resize: vertical;
 }
-textarea {
-  min-height: 250px;
+.editable-div {
+  min-height: 200px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-family: 'Noto Sans Tamil', sans-serif;
+  font-size: 15px;
+  line-height: 26.1px;
+  outline: none;
+  white-space: pre-wrap;
+  margin-top: 10px;
 }
+
+
+.editable-div h1,
+.editable-div h2,
+.editable-div strong {
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 30px;
+}
+
+.editable-div p {
+  margin-bottom: 10px;
+}
+
 .image-upload-button {
   padding: 10px 20px;
   background-color: #4a90e2;
