--- a/src/app/Styles/NewsDetail.css
+++ b/src/app/Styles/NewsDetail.css
@@ -1,15 +1,15 @@
 .news-detail-container {
-  width: 90%;
-  max-width: 1000px;
+  width: 87%;
   margin: 50px auto auto 120px;
   padding: 20px;
   background-color: whitesmoke;
-  border-radius: 8px;
+  border-radius: 25px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .news-title {
-  font-size: 28px;
+  font-family: "Anek Tamil",sans-serif;
+  font-size: 22px;
   margin-bottom: 20px;
   color: #1a1a1a;
 }
@@ -27,9 +27,10 @@
 }
 
 .news-content {
+  font-family: "Notos Sans Tamil",sans-serif;
   white-space: pre-wrap;
   margin-top: 20px;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.6;
   color: #333;
 }
