--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -11,12 +11,15 @@
   left: 0;
   gap: 12px;
   z-index: 1000;
+  font-family: 'Notos Sans Tamil'sans-serif;
 }
 
 .sidebar-icon {
-  font-size: 20px;
+  font-size: 18px;
   flex-shrink: 0;
-  margin-top: 4px;
+  margin-top: 0;
+  display: flex;
+  align-items: center;
 }
 
 .sidebar-submenu {
@@ -28,15 +31,16 @@
 
 .sidebar-link {
   display: flex;
-  align-items: start;
+  align-items:center;
   color: #f5f5f5;
-  padding: 6px;
+  padding: 8px 12px;
   font-size: 16px;
   font-weight: 600;
   text-decoration: none;
   margin-top: -16px;
   width: 86%;
   gap: 10px;
+  box-sizing: border-box;
 }
 
 .sidebar-link:hover {
@@ -51,10 +55,11 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 5px;
+  padding: 8px 12px;
   font-size: 0.95rem;
   font-weight: 400;
   text-decoration: none;
+  box-sizing: border-box;
   color: #e5dfdf;
   transition: color 0.2s, background 0.2s;
   width: 86%;
@@ -105,7 +110,7 @@
   justify-content: center;
   gap: 0px;
   flex-grow: 1;
-  margin-left: -12%;
+  margin-left: -20%;
 }
 
 .nav-page {
