--- a/src/app/Styles/StatusPage.css
+++ b/src/app/Styles/StatusPage.css
@@ -5,7 +5,7 @@
     padding: 11px;
     margin-left: 120px;
     margin-top: 50px;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Notos Sans Tamil', sans-serif;
     background-color: whitesmoke;
     height: calc(100% - 50px);
     border-radius: 25px;
@@ -44,6 +44,7 @@
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 6px;
+    font-family: "Notos Sans Tamil",sans-serif;
   }
 
   .status-add-container textarea {
