--- a/src/app/Styles/TagsPage.css
+++ b/src/app/Styles/TagsPage.css
@@ -5,7 +5,7 @@
     padding: 11px;
     margin-left: 120px;
     margin-top: 50px;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Notos Sans Tamil', sans-serif;
     background-color: whitesmoke;
     height: calc(100% - 50px);
     border-radius: 25px;
