--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;600;700&display=swap');
 
-:root {
-  --body-bg: #131D4F;
-  --text-color: #333;
-}
-
-.dark {
-  --body-bg: #0d0d0d;
-  --text-color: #333;
-}
 
 body {
   background: #131D4F;
+  font-family: "Notos Sans Tamil",sans-serif;
   color: var(--text-color);
-  font-family: 'Noto Sans Tamil', 'Roboto', sans-serif;
   transition: background 0.3s ease, color 0.3s ease;
 }
 
-/* =======================home page css ========================== */
