--- a/src/app/Styles/PostDisplay.css
+++ b/src/app/Styles/PostDisplay.css
@@ -1,11 +1,5 @@
 /* Base styles */
 
-body {
-  background-color: white;
-  margin: 0;
-  font-family: 'Notos Sans Tamil', sans-serif;
-}
-
 .category {
   position: sticky;
   top: 0;
@@ -36,7 +30,6 @@ body {
   max-height: 400px;
   object-fit: cover;
   border-radius: 8px;
-  margin: 20px 0;
 }
 
 .post-category {
@@ -245,7 +238,7 @@ body {
 /* Main container */
 .category-page {
   max-width: 1100px;
-  margin: 20px auto;
+  margin-top: 20px;
   padding: 0 100px;
   min-height: 100vh;
 }
