--- a/src/app/Styles/Home.css
+++ b/src/app/Styles/Home.css
@@ -90,10 +90,10 @@
 }
 
 .mini-image {
-  width: 130px;
-  height: 70px;
+  width: auto;
+  height: 80px;
   object-fit: cover;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 /* =============================Breakingnews ========================== */
@@ -144,14 +144,14 @@
 
 .main-breaking img {
   width: 100%;
-  height: 100%;
+  height: 300px; 
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 .main-breaking .title {
   font-family: 'Anek Tamil', sans-serif;
-  margin-top: 10px;
+  margin-top: 0px;
   font-weight: 700;
   font-size: 15px;
 }
@@ -162,7 +162,7 @@
   align-items: center;
   gap: 10px;
   background-color: #f8f8f8;
-  padding: 10px;
+  padding: 6px;
   border-radius: 6px;
   height: 120px;
   cursor: pointer;
@@ -170,13 +170,12 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 
-.breaking-img {
-  width: 100px;
-  height: 80px;
-  object-fit: cover;
+.breaking-Image{
   border-radius: 6px;
+  width: 100px;
+  height: 90px;
+  object-fit: cover;
 }
-
 .breaking-title {
   font-family: 'Anek Tamil', sans-serif;
   font-size: 11px;
